deploy/minimal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  clusterIP: None
  selector:
    app: server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
